# statui

./: Cargo.toml  README.md  demo.tape  statui.toml
.github/workflows/: release.yml  rust.yml  vhs.yml
presets/: ai_llm.toml  cloud_infra.toml  dev_registries.toml
src/: actions.rs  app.rs  backend.rs  config.rs  keymap.rs  main.rs  state.rs
src/ui/: fx.rs  mod.rs  theme.rs  util.rs  widgets.rs
src/ui/widgets/: footer.rs  inspector.rs  mod.rs  table.rs  welcome.rs
src/ui/widgets/inspector/: header.rs
