[package]
name = "statui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
color-eyre = "0.6.5"
config = "0.15.18"
directories = "6.0.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tachyonfx = "0.20.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.9.8"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
