[package]
name = "statui"
version = "0.2.1"
edition = "2024"
description = "A lightweight TUI dashboard for API health monitoring built with Rust and Ratatui."
authors = ["Mohamed Badry <m.badry.fl@gmail.com>"]
license = "MIT"
repository = "https://github.com/Mohamed-Badry/statui"
readme = "README.md"
keywords = ["tui", "monitoring", "api", "health-check", "dashboard"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    "assets/*",
    ".github/*",
    "tests/*",
    "demo.tape",
    "presets/*",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ bin-ext }"
pkg-fmt = "tgz"

# Windows Override
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"


[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
config = "0.15.18"
directories = "6.0.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tachyonfx = "0.20.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.9.8"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true
